--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/NoStyle"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityUserLobby"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
