--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -15,11 +15,14 @@
         android:theme="@style/NoStyle"
         tools:targetApi="31">
         <activity
+            android:name=".ActivitySellerLobby"
+            android:exported="false" />
+        <activity
             android:name=".ActivityUserLobby"
             android:exported="false" />
         <activity
             android:name=".EditProfileActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
