Click recycler view ok + vista fragmento addproduct ok

--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.EditProductActivity" />
         <activity
             android:name=".activities.ActivityUserLobby"
             android:exported="false" />
