+ Cambiado el nombre de las variables de Product.java + Modificado los editText de LoginFragment a Material design

--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -12,16 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/NoStyle"
+        android:theme="@style/Base.Theme.LocalMarket"
         tools:targetApi="31">
         <activity
             android:name=".activities.ActivitySellerLobby"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
         <activity android:name=".activities.EditProductActivity" />
         <activity
