--- a/Frontend/gradle/wrapper/gradle-wrapper.properties
+++ b/Frontend/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Mar 04 18:25:36 CET 2024
+#Mon Apr 08 14:13:01 CEST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-bin.zip
