--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
 
     <application
         android:allowBackup="true"
@@ -14,25 +17,35 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.LocalMarket"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAHjxuxYHgF4YUaMtOmhu_Pt06YXAR4MsI"/>
+
         <activity
             android:name=".activities.ActivitySellerLobby"
+            android:exported="false">
+
+
+        </activity>
+
+        <activity android:name=".activities.EditProductActivity" />
+        <activity
+            android:name=".activities.ActivityUserLobby"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.EditProductActivity" />
-        <activity
-            android:name=".activities.ActivityUserLobby"
-            android:exported="false" />
         <activity
             android:name=".activities.EditProfileActivity"
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
+            android:exported="false">
+
 
         </activity>
     </application>
