--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
 
         <activity android:name=".activities.AddToCartActivity" />
 
-
+        <activity android:name=".activities.OrderActivity" />
 
 
 </application>
