+cambios hechos a UserProductFragment.java + adquisicion de productores en rango v3

--- a/Frontend/gradle/libs.versions.toml
+++ b/Frontend/gradle/libs.versions.toml
@@ -11,11 +11,12 @@ annotationJvm = "1.7.1"
 firebaseFirestore = "24.11.0"
 fragmentTesting = "1.6.2"
 playServicesMaps = "18.2.0"
+espressoContrib = "3.6.0-alpha03"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+ext-junit = { group = "androidx.test.ext", name = "junit", version = "1.2.0-alpha03" }
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.6.0-alpha03" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
@@ -24,6 +25,7 @@ annotation-jvm = { group = "androidx.annotation", name = "annotation-jvm", versi
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 fragment-testing = { group = "androidx.fragment", name = "fragment-testing", version.ref = "fragmentTesting" }
 play-services-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "playServicesMaps" }
+espresso-contrib = { group = "androidx.test.espresso", name = "espresso-contrib", version.ref = "espressoContrib" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
